--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="contact.html">Contact</a>
     </div>
 
-    <h1>Dr. John Doe</h1>
+    <h1>Malek Hanounah</h1>
     <p>Mathematician | Number Theory | Algebraic Geometry</p>
     
     <h2>About Me</h2>
