--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
     <!-- Profile Image -->
-    <img src="images/profile.jpg" alt="Malek Hanounah" class="profile-img">
+    <img src="Clanque.jpg" alt=" Malek Hanounah " class="profile-img">
 
     <!-- Navigation Bar -->
     <div class="navbar">
