--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>About Me</h2>
     <p>I am a PhD student at Greifswald University under the supervision of <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/">Ines Kath</a>. I am interested in locally homogeneous pseudo-Riemannian geometries, and in Geometric structures in general. 
 
-My Master thesis on Apollonian circle packings ([here](https://drive.google.com/file/d/12N36Iyyq2KrwBQ_KjhLNsZJuQL9_NLsq/view?usp=sharing), [slides](https://drive.google.com/file/d/10tKowDKs3TsrwXf91NMXwWzTU_OEzI0R/view)). You find here my [CV](https://drive.google.com/file/d/1X0RHeSlO0di5_ye2FuDTxciR1IvMm2RE/view?usp=sharing) (version of June 2024).
+My Master thesis on Apollonian circle packings <a href="https://drive.google.com/file/d/12N36Iyyq2KrwBQ_KjhLNsZJuQL9_NLsq/view?usp=sharing">here</a>, <a href="https://drive.google.com/file/d/10tKowDKs3TsrwXf91NMXwWzTU_OEzI0R/view">slides</a>. You find here my <a href="https://drive.google.com/file/d/1X0RHeSlO0di5_ye2FuDTxciR1IvMm2RE/view?usp=sharing">CV</a>(version of June 2024).
 I am currently co-organizing the Tassili Sunday Maths Seminar ([here](https://sites.google.com/view/tsmseminar-maths/home?pli=1)) and the Research Seminar at Greifswald University ([here](https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/analysis/)).
 </p>
     
