--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 My Master thesis on Apollonian circle packings <a href="https://drive.google.com/file/d/12N36Iyyq2KrwBQ_KjhLNsZJuQL9_NLsq/view?usp=sharing">here</a>, <a href="https://drive.google.com/file/d/10tKowDKs3TsrwXf91NMXwWzTU_OEzI0R/view">slides</a>. You find here my <a href="https://drive.google.com/file/d/1X0RHeSlO0di5_ye2FuDTxciR1IvMm2RE/view?usp=sharing">CV</a> (version of June 2024).
 I am currently co-organizing the Tassili Sunday Maths Seminar <a href="https://tassiliseminar.github.io/">here</a> and the Research Seminar at Greifswald University <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/analysis/">here</a>.
 </p>
-<h3>About Me</h3>
+<h3>Contact</h3>
  <p>   
-Institut für Mathematik und Informatik
+Institut für Mathematik und Informatik <br>
 
-Walther-Rathenau-Straße 47, 17489
+Walther-Rathenau-Straße 47, 17489 <br>
 
-Greifswald, Germany.
+Greifswald, Germany. <br>
 
- malek.hanounah at uni-greifswald.de</p>
+<b> Email: malek.hanounah at uni-greifswald.de </b> </p>
     
 </body>
 </html>
