--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <div class="navbar">
         <a href="index.html">Home</a>
         <a href="publications.html">Publications</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="talks.html">Talks</a>
+        <a href="mathwin.html">MathWin</a>
+        
     </div>
 
     <h1>Malek Hanounah</h1>
