--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="publications.html">Publications</a>
-        <a href="talks.html">Talks</a>
+        <a href="Research.html">Research</a>
+        <a href="teaching.html">Teaching</a>
         <a href="mathwin.html">MathWin</a>
         
     </div>
@@ -60,7 +60,7 @@ I am currently co-organizing the Tassili Sunday Maths Seminar <a href="https://t
 <h3> Interests </h3>
     <ul>
     <li>Geometric structures</li>
-    <li>Locally homogeneous pseudo-Riemannian structures (e.g. locally symmetric spaces)</li>
+    <li>Locally homogeneous pseudo-Riemannian manifolds (e.g. locally symmetric spaces)</li>
     <li>Discrete groups</li>
 </ul>
 
