--- a/publications.html
+++ b/publications.html
@@ -22,16 +22,18 @@
     <h1>Publications</h1>
     
     <ul>
-      <li>
-    <strong>On completeness of foliated structures, and null Killing fields</strong> 
-    (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
-    <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
-    <strong>Mathematische Annalen</strong>, 
-    <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">pdf</a> (2025).
-</li>
+    <li>
+        <strong>On completeness of foliated structures, and null Killing fields</strong> 
+        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
+        <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
+        <strong>Mathematische Annalen</strong>, 
+        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">pdf</a> (2025).
+    </li>
+    <li>
+        <a href="https://arxiv.org/abs/yyyy.yyyy" target="_blank">Paper Title 2</a>
+    </li>
+</ul>
 
-        <li><a href="https://arxiv.org/abs/yyyy.yyyy">Paper Title 2</a></li>
-    </ul>
     
     <p><a href="index.html">Back to Home</a></p>
 </body>
