--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="Research.html">Research</a>
+        <a href="publications.html">Research</a>
         <a href="teaching.html">Teaching</a>
         <a href="mathwin.html">MathWin</a>
         
