--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,20 @@
 <h1>Publications</h1>
 <ol>
     <li>
-        <a href="https://arxiv.org/abs/yyyy.yyyy" target="_blank">Paper Title 2</a>
+        <strong>Topology and Dynamics of compact plane waves</strong> 
+        (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">Ines Kath</a>, 
+        <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>, and 
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
+        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), 
+        <strong>Crelle's Journal</strong>, 
+        <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a> (2024).
+    </li>
+       <li>
+        <strong>On homogeneous plane waves</strong> 
+        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
+        (2023), 
+        <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, submitted.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
