--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,14 @@
     </style>
 </head>
 <body>
-<h1>Publications</h1>
+
+    <h2>Preprints</h2>
+<ol>
+    <li>
+       kkk
+    </li>
+    
+    <h2>Publications</h2>
 <ol>
     <li>
         <strong>Topology and Dynamics of compact plane waves</strong> 
@@ -48,6 +55,7 @@
     
 </ol>
 
+    <h2>Talks</h2> 
 <p><a href="index.html">Back to Home</a></p>
 </body>
 </html>
