--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,19 @@
 </ol>
 
     <h2>Talks</h2> 
+    <ul>
+<strong> Algebra, Geometry and Topology seminar: Foliated geometric structures, symmetric spaces and
+completeness</strong> 
+        (16/10/2024) 
+        <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/forschungsseminar/">site</a>.
+      <li>  
+    <li>
+        <strong>Tassili Sunday Maths Seminar (TSMS): Foliated geometric structures</strong> 
+        (09/06/2024) 
+        <a href="https://drive.google.com/file/d/1f1qrPdYqkIJvVMStndP8deAxP3f_YyLI/view?usp=sharing" target="_blank">slides</a>.
+    </li>
+</ul>
+
 <p><a href="index.html">Back to Home</a></p>
 </body>
 </html>
