--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Walther-Rathenau-Straße 47, 17489 <br>
 Greifswald, Germany. <br>
 
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
-    <img src="Clanque.jpg" alt="Calanques" width="300" height="200">
+    <img src="images/Clanque2.jpg" alt="Calanques" width="300" height="200">
 
 </body>
 </html>
