--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             padding: 10px 0;
         }
         .navbar a {
-            color: white;
+            color: blue;
             text-decoration: none;
             padding: 14px 20px;
             text-align: center;
