--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             padding: 10px 0;
         }
         .navbar a {
-            color: blue;
+            color: white;
             text-decoration: none;
             padding: 14px 20px;
             text-align: center;
         }
         .navbar a:hover {
-            background-color: #575757;
+            background-color: #00008B;
             border-radius: 5px;
         }
 
@@ -73,7 +73,7 @@ Walther-Rathenau-Straße 47, 17489 <br>
 Greifswald, Germany. <br>
 
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
-    <img src="images/Clanque2.jpg" alt="Calanques" width="1000" height="1000">
+    <img src="images/Clanque.jpg" alt="Calanques" width="400" height="300">
 
 </body>
 </html>
