--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             background-color: #00008B;
             border-radius: 5px;
         }
+.bottom-right-image {
+            position: fixed; /* Fix the image in place */
+            bottom: 0; /* Align the image to the bottom of the page */
+            right: 0; /* Align the image to the right of the page */
+            margin: 20px; /* Optional: add some margin for spacing */
+        }
 
     </style>
 </head>
@@ -73,7 +79,9 @@ Walther-Rathenau-Straße 47, 17489 <br>
 Greifswald, Germany. <br>
 
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
-    <img src="images/Clanque.jpg" alt="Calanques" width="400" height="300">
+
+     
+    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image" " width="400" height="300">
 
 </body>
 </html>
