--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Malek Hanounah</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Times New Roman, sans-serif;
             max-width: 800px;
             margin: auto;
             padding: 20px;
