--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      
-    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image" " width="400" height="300">
+    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image">
 
 </body>
 </html>
