--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             border-radius: 5px;
         }
 .bottom-right-image {
-            position: fixed; /* Fix the image in place */
-            bottom: 0; /* Align the image to the bottom of the page */
-            right: 0; /* Align the image to the right of the page */
-            margin: 20px; /* Optional: add some margin for spacing */
+            position: fixed; /* Fix the image position */
+            bottom: 20px; /* Add a 20px space from the bottom */
+            right: 20px; /* Add a 20px space from the right */
+            width: 150px; /* Set a specific width */
+            height: auto; /* Maintain aspect ratio */
         }
 
     </style>
@@ -81,7 +82,7 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      
-    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image">
+    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image" width=>
 
 </body>
 </html>
