--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             position: fixed; /* Fix the image position */
             bottom: 20px; /* Add a 20px space from the bottom */
             right: 20px; /* Add a 20px space from the right */
-            width: 150px; /* Set a specific width */
+            width: auto; /* Set a specific width */
             height: auto; /* Maintain aspect ratio */
         }
 
