--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             border-radius: 5px;
         }
 .bottom-right-image {
-            position: fixed; /* Fix the image position */
             bottom: 20px; /* Add a 20px space from the bottom */
             right: 20px; /* Add a 20px space from the right */
-            width: auto; /* Set a specific width */
+            width: 300; /* Set a specific width */
             height: auto; /* Maintain aspect ratio */
         }
 
