--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Navigation Bar */
         .navbar {
-            background-color: #333;
+            background-color: #00008B;
             overflow: hidden;
             display: flex;
             justify-content: center;
