--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 .bottom-right-image {
             bottom: 20px; /* Add a 20px space from the bottom */
             right: 20px; /* Add a 20px space from the right */
-            width: 50; /* Set a specific width */
-            height: auto; /* Maintain aspect ratio */
+            width: 200; /* Set a specific width */
+            height: 150; /* Maintain aspect ratio */
         }
 
     </style>
