--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Navigation Bar */
         .navbar {
-            background-color: #00008B;
+            background-color: #008B8B;
             overflow: hidden;
             display: flex;
             justify-content: center;
@@ -31,7 +31,7 @@
             text-align: center;
         }
         .navbar a:hover {
-            background-color: #00008B;
+            background-color: #C0C0C0;
             border-radius: 5px;
         }
 .bottom-right-image {
