--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
             background-color: #C0C0C0;
             border-radius: 5px;
         }
-.bottom-right-image {
-            bottom: 20px; /* Add a 20px space from the bottom */
-            right: 20px; /* Add a 20px space from the right */
-            width: 200; /* Set a specific width */
-            height: 150; /* Maintain aspect ratio */
+/* Image fixed at the bottom center */
+        .bottom-center-image {
+            position: fixed; /* Fix position to keep it in place */
+            bottom: 20px; /* 20px from the bottom */
+            left: 50%; /* Move to the center horizontally */
+            transform: translateX(-50%); /* Adjust to perfectly center */
+            width: 150px; /* Set the width */
+            height: auto; /* Maintain aspect ratio */
+            z-index: 9999; /* Ensure it stays on top */
         }
 
     </style>
@@ -81,7 +85,6 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      
-    <img src="images/Clanque.jpg" alt="Bottom Right Image" class="bottom-right-image" width=>
-
+    <img src="https://via.placeholder.com/150" alt="Bottom Center Image" class="bottom-center-image">
 </body>
 </html>
