--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         }
 /* Image fixed at the bottom center */
         .bottom-center-image {
-            position: fixed; /* Fix position to keep it in place */
             bottom: 20px; /* 20px from the bottom */
             left: 50%; /* Move to the center horizontally */
             transform: translateX(-50%); /* Adjust to perfectly center */
@@ -85,6 +84,6 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      
-    <img src="https://via.placeholder.com/150" alt="Bottom Center Image" class="bottom-center-image">
+    <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image">
 </body>
 </html>
