--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Walther-Rathenau-Straße 47, 17489 <br>
 
 Greifswald, Germany. <br>
 
-<b> Email: malek.hanounah at uni-greifswald.de </b> <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image"> </p>
+<b> Email: malek.hanounah at uni-greifswald.de </b> <br> <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image"> </p>
 
      
     
