--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             border-radius: 5px;
         }
 /* Image fixed at the bottom center */
-        .bottom-center-image {
-            bottom: 20px; /* 20px from the bottom */
-            left: 50%; /* Move to the center horizontally */
-            transform: translateX(-50%); /* Adjust to perfectly center */
-            width: 150px; /* Set the width */
+       /* Image fixed at the bottom-right */
+        .bottom-right-image {
+            bottom: 20px; /* Distance from the bottom */
+            right: 20px; /* Distance from the right */
+            width: 150px; /* Image width */
             height: auto; /* Maintain aspect ratio */
-            z-index: 9999; /* Ensure it stays on top */
+            z-index: 9999; /* Keep it above other elements */
         }
 
     </style>
