--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             bottom: 20px; /* Distance from the bottom */
             right: 20px; /* Distance from the right */
             width: 150px; /* Image width */
-            height: auto; /* Maintain aspect ratio */
+            height: 100px; /* Maintain aspect ratio */
             z-index: 9999; /* Keep it above other elements */
         }
 
@@ -81,7 +81,7 @@ Walther-Rathenau-Straße 47, 17489 <br>
 
 Greifswald, Germany. <br>
 
-<b> Email: malek.hanounah at uni-greifswald.de </b> <br> <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image"> </p>
+<b> Email: malek.hanounah at uni-greifswald.de </b> <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image"> </p>
 
      
     
