--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 /* Image fixed at the bottom center */
        /* Image fixed at the bottom-right */
         .bottom-right-image {
+            position: absolute;
             bottom: 20px; /* Distance from the bottom */
             right: 20px; /* Distance from the right */
-            width: 100px; /* Image width */
-            height: 80px; /* Maintain aspect ratio */
+            width: 150px; /* Image width */
+            height: auto; /* Maintain aspect ratio */
             z-index: 9999; /* Keep it above other elements */
         }
 
@@ -81,9 +82,10 @@ Walther-Rathenau-Straße 47, 17489 <br>
 
 Greifswald, Germany. <br>
 
-<b> Email: malek.hanounah at uni-greifswald.de </b> <img src="images/Clanque2.jpg" alt="Bottom Right Image" class="bottom-right-image"> </p>
+<b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
-     
+     <hr>
+    <img src="images/Clanque2.jpg" alt="Bottom Right Image" class="bottom-right-image">
     
 </body>
 </html>
