--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 /* Image fixed at the bottom center */
        /* Image fixed at the bottom-right */
-        .bottom-right-image {
+        .top-right-image {
             position: absolute;
             bottom: 20px; /* Distance from the bottom */
             right: 20px; /* Distance from the right */
@@ -85,7 +85,7 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      <hr>
-    <img src="images/Clanque2.jpg" alt="Bottom Right Image" class="bottom-right-image">
+    <img src="images/Clanque2.jpg" alt="Top Right Image" class="top-right-image">
     
 </body>
 </html>
