--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
        /* Image fixed at the bottom-right */
         .top-right-image {
             position: absolute;
-            bottom: 20px; /* Distance from the bottom */
-            right: 20px; /* Distance from the right */
+            top: 10px; /* Distance from the bottom */
+            right: 10px; /* Distance from the right */
             width: 150px; /* Image width */
             height: auto; /* Maintain aspect ratio */
             z-index: 9999; /* Keep it above other elements */
