--- a/Homepage/teaching.html
+++ b/Homepage/teaching.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teaching</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #333;
+        }
+        ul {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: blue;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>Teaching</h1>
+    <p><strong>At Greifswald University:</strong></p>
+
+    <ul>
+        <li>Measure and Integration exercises (Fall 2022, 11 students).</li>
+        <li>Representation Theory exercises (Summer 2023, 3 students).</li>
+        <li>Measure and Integration exercises (Fall 2023, 6 students).</li>
+        <li>Functional Analysis exercises (Summer 2024, 7 students).</li>
+    </ul>
+
+    <a href="index.html">⬅ Back to Home</a>
+
+</body>
+</html>
