--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,12 @@
         <strong>Mathematische Annalen</strong>, 
         <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">pdf</a> (2025).
     </li>
+<li>
+<strong>Completeness of compact loally symmetric Lorntz manifolds</strong> 
+        (with <a href="https://sites.google.com/view/alloutsouheib/research?authuser=0" target="_blank">Souheib Allout</a>), 
+        <a href="https://arxiv.org/pdf/2503.07843" target="_blank">arXiv</a> (2025).
+    
+</li>
 
 
     
