--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
         <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">pdf</a> (2025).
     </li>
 <li>
-<strong>Completeness of compact loally symmetric Lorntz manifolds</strong> 
+<strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
         (with <a href="https://sites.google.com/view/alloutsouheib/home?authuser=0" target="_blank">Souheib Allout</a>), 
         <a href="https://arxiv.org/pdf/2503.07843" target="_blank">arXiv</a> (2025).
     
