--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
     <li>
         <strong>Topology and Dynamics of compact plane waves</strong> 
         (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">Ines Kath</a>, 
-        <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>, and 
+        <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
         <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), 
         <strong>Crelle's Journal</strong>, 
