--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         /* Navigation Bar */
         .navbar {
+            position: fixed;
             background-color: #008B8B;
             overflow: hidden;
             display: flex;
