--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
         }
 /* Image fixed at the bottom center */
        /* Image fixed at the bottom-right */
-      .bottom-center-image {
-            position: absolute; /* Fix position to keep it in place */
-            bottom: 20px; /* 20px from the bottom */
-            left: 50%; /* Move to the center horizontally */
-            transform: translateX(-50%); /* Adjust to perfectly center */
-            width: 250px; /* Set the width */
-            height: auto; /* Maintain aspect ratio */
-            z-index: 9999; /* Ensure it stays on top */
+     .bottom-image {
+            position: absolute; /* Moves with the page */
+            bottom: 20px; /* Distance from the bottom */
+            left: 50%; /* Center horizontally */
+            transform: translateX(-50%); /* Ensure exact centering */
+            width: 250px; /* Adjust the size */
+            height: auto;
         }
 
     </style>
@@ -86,7 +85,7 @@ Greifswald, Germany. <br>
 <b> Email: malek.hanounah at uni-greifswald.de </b> </p>
 
      <hr>
-    <img src="images/Clanque2.jpg" alt="Bottom Center Image" class="bottom-center-image">
+    <img src="images/Clanque2.jpg" alt="Bottom Image" class="bottom-image">
     
 </body>
 </html>
