--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numbered List Upward</title>
+    <title>Research</title>
     <style>
         ol {
             counter-reset: list-counter; /* Initialize the counter */
