--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Navigation Bar */
         .navbar {
-            position: fixed;
+            position: absolut;
             background-color: #008B8B;
             overflow: hidden;
             display: flex;
