--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* Navigation Bar */
         .navbar {
-            position: absolute;
+            position: absolut;
             background-color: #008B8B;
             overflow: hidden;
             display: flex;
@@ -72,7 +72,8 @@
 
     <h1>Malek Hanounah</h1>
 
-   
+    <!-- Profile Picture -->
+    <img src="Clanque.jpg" alt="Malek Hanounah" class="profile-img">
 
     <h2>About Me</h2>
     <p>I am a PhD student at Greifswald University under the supervision of <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/">Ines Kath</a>. 
@@ -101,7 +102,6 @@
     </p>
 
     <hr>
- <!-- Profile Picture -->
-    <img src="Clanque.jpg" alt="Malek Hanounah" class="profile-img">
+
 </body>
 </html>
