--- a/publications.html
+++ b/publications.html
@@ -38,8 +38,7 @@
         <strong>On homogeneous plane waves</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
-        (2023), 
-        <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, submitted.
+          <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, (2023), submitted.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
