--- a/publications.html
+++ b/publications.html
@@ -60,11 +60,11 @@
 <hr>
     <h2>Talks</h2> 
     <ul>
-       <li> <strong> Geometry, Analysis, and Physics in Lorentzian Signature: up coming talk (06/05/2025) </strong><a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a> </li>.
-        <li> CIRM school geometric structures and discrete group actions: Completeness of compact locally symmetric Lorentz manifolds (14/04/2025) <a href="https://conferences.cirm-math.fr/3241.html">site</a>, <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a> </li>
+       <li> <strong> Geometry, Analysis, and Physics in Lorentzian Signature: up coming talk (06/05/2025) </strong><a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>. </li>
+        <li> <strong> CIRM school geometric structures and discrete group actions: Completeness of compact locally symmetric Lorentz manifolds (14/04/2025) </strong> <a href="https://conferences.cirm-math.fr/3241.html">site</a>, <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>. </li>
         <li> <strong> RSME's 7th Congress of Young Researchers
 Bilbao: Bieberbach theorem for compact locally homogeneous
-plane waves </strong> <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a> </li>.
+plane waves </strong> <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>. </li>
         <li>
 <strong> Algebra, Geometry and Topology seminar: Foliated geometric structures, symmetric spaces and
 completeness</strong> 
