--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
         <li> <strong> CIRM school geometric structures and discrete group actions: Completeness of compact locally symmetric Lorentz manifolds (14/04/2025) </strong> <a href="https://conferences.cirm-math.fr/3241.html">site</a>, <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>. </li>
         <li> <strong> RSME's 7th Congress of Young Researchers
 Bilbao: Bieberbach theorem for compact locally homogeneous
-plane waves </strong> <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>. </li>
+plane waves (16/01/2025) </strong> <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>. </li>
         <li>
 <strong> Algebra, Geometry and Topology seminar: Foliated geometric structures, symmetric spaces and
 completeness</strong> 
@@ -77,7 +77,6 @@ completeness</strong>
         <a href="https://drive.google.com/file/d/1f1qrPdYqkIJvVMStndP8deAxP3f_YyLI/view?usp=sharing" target="_blank">slides</a>.
     </li>
 </ul>
-
 <p><a href="index.html">Back to Home</a></p>
 </body>
 </html>
