--- a/publications.html
+++ b/publications.html
@@ -60,23 +60,37 @@
 <hr>
     <h2>Talks</h2> 
     <ul>
-       <li> <strong> Geometry, Analysis, and Physics in Lorentzian Signature: up coming talk (06/05/2025) </strong><a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>. </li>
-        <li> <strong> CIRM school geometric structures and discrete group actions: Completeness of compact locally symmetric Lorentz manifolds (14/04/2025) </strong> <a href="https://conferences.cirm-math.fr/3241.html">site</a>, <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>. </li>
-        <li> <strong> RSME's 7th Congress of Young Researchers
-Bilbao: Bieberbach theorem for compact locally homogeneous
-plane waves (16/01/2025) </strong> <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>. </li>
-        <li>
-<strong> Algebra, Geometry and Topology seminar: Foliated geometric structures, symmetric spaces and
-completeness</strong> 
-        (16/10/2024) 
-        <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/forschungsseminar/">site</a>.
-      </li>  
-    <li>
-        <strong>Tassili Sunday Maths Seminar (TSMS): Foliated geometric structures</strong> 
-        (09/06/2024) 
-        <a href="https://drive.google.com/file/d/1f1qrPdYqkIJvVMStndP8deAxP3f_YyLI/view?usp=sharing" target="_blank">slides</a>.
+    <li> 
+        <strong>Geometry, Analysis, and Physics in Lorentzian Signature:</strong> 
+        <em>upcoming talk</em> (06/05/2025) 
+        <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>.
     </li>
-</ul>
+
+    <li> 
+        <strong>CIRM school geometric structures and discrete group actions:</strong> 
+        <em>Completeness of compact locally symmetric Lorentz manifolds</em> (14/04/2025) 
+        <a href="https://conferences.cirm-math.fr/3241.html">site</a>, 
+        <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>.
+    </li>
+
+    <li> 
+        <strong>RSME's 7th Congress of Young Researchers Bilbao:</strong> 
+        <em>Bieberbach theorem for compact locally homogeneous plane waves</em> (16/01/2025) 
+        <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, 
+        <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>.
+    </li>
+
+    <li> 
+        <strong>Algebra, Geometry and Topology seminar:</strong> 
+        <em>Foliated geometric structures, symmetric spaces and completeness</em> (16/10/2024) 
+        <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/forschungsseminar/">site</a>.
+    </li>
+
+    <li> 
+        <strong>Tassili Sunday Maths Seminar (TSMS):</strong> 
+        <em>Foliated geometric structures</em> (09/06/2024) 
+        <a href="https://drive.google.com/file/d/1f1qrPdYqkIJvVMStndP8deAxP3f_YyLI/view?usp=_
+
 <p><a href="index.html">Back to Home</a></p>
 </body>
 </html>
