--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
     <li> 
         <strong>Tassili Sunday Maths Seminar (TSMS):</strong> 
         <em>Foliated geometric structures</em> (09/06/2024) 
-        <a href="https://drive.google.com/file/d/1f1qrPdYqkIJvVMStndP8deAxP3f_YyLI/view?usp=_
+        <a href="https://tassiliseminar.github.io/">site</a>
 
 <hr>
 
