--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
 
     <li> 
         <strong>RSME's 7th Congress of Young Researchers Bilbao:</strong> 
-        <em>Bieberbach theorem for compact locally homogeneous plane waves</em> (16/01/2025) 
+        <em> A Bieberbach theorem for compact locally homogeneous plane waves</em> (16/01/2025) 
         <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, 
         <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>.
     </li>
