--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
         <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
         <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), 
-        <strong>Crelle's Journal</strong>, 
+        <em>Crelle's Journal</em>, 
         <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a> (2024).
     </li>
        <li>
@@ -44,7 +44,7 @@
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
-        <strong>Mathematische Annalen</strong>, 
+        <em>Mathematische Annalen</em>, 
         <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">pdf</a> (2025).
     </li>
 <li>
