--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h1>Malek Hanounah</h1>
 
     <!-- Profile Picture -->
-    <img src="Clanque2.jpg" alt="Malek Hanounah" class="profile-img">
+    <img src="Clanque.jpg" alt="Malek Hanounah" class="profile-img">
 
     <h2>About Me</h2>
     <p>I am a PhD student at Greifswald University under the supervision of <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/">Ines Kath</a>. 
