--- a/teaching.html
+++ b/teaching.html
@@ -32,8 +32,8 @@
     <p><strong>At Greifswald University:</strong></p>
 
     <ul>
-        <li>Analysis II (Fall 2025, 15 students, 28H.)</li>
-        <li>Analysis I (Fall 2024, 7 students, 28H).</li>
+        <li>Analysis II (Fall 2025, 15 students, 28H) conducted in German.</li>
+        <li>Analysis I (Fall 2024, 7 students, 28H), conducted in German.</li>
         <li>Functional Analysis exercises (Summer 2024, 7 students, 28H).</li>
         <li>Measure and Integration exercises (Fall 2023, 6 students, 28H).</li>
          <li>Representation Theory exercises (Summer 2023, 3 students, 28H).</li>
