--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
     <li> 
         <strong>Tassili Sunday Maths Seminar (TSMS):</strong> 
         <em>Foliated geometric structures</em> (09/06/2024) 
-        <a href="https://tassiliseminar.github.io/">site</a>
+        <a href="https://tassiliseminar.github.io/">site</a>.
 
 <hr>
 
