--- a/mathwin.html
+++ b/mathwin.html
@@ -29,10 +29,10 @@
 <body>
 
     <h2>MathWin</h2>
-    I am an active member of the [MathWin](https://mathwin.org/) project.
+    I am an active member of the  project.
     
     One of the main goals of this project is to provide a solid and polyvalent mathematical training for excellent first and second year University students.
-
+<hr>
     <a href="index.html">⬅ Back to Home</a>
 
 </body>
