--- a/mathwin.html
+++ b/mathwin.html
@@ -29,7 +29,7 @@
 <body>
 
     <h2>MathWin</h2>
-    I am an active member of the  project.
+    I am an active member of the <a href="https://mathwin.org/" target="_blank">MathWin</a> project.
     
     One of the main goals of this project is to provide a solid and polyvalent mathematical training for excellent first and second year University students.
 <hr>
