--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
         <em>Mathematische Annalen</em>, 
-        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">LInk</a> (2025).
+        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">Link</a> (2025).
     </li>
 <li>
 <strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
