--- a/publications.html
+++ b/publications.html
@@ -29,23 +29,23 @@
         <strong>Topology and Dynamics of compact plane waves</strong> 
         (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">Ines Kath</a>, 
         <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
-        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), 
-        <em>Crelle's Journal</em>, 
-        <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">Pdf</a> (2024).
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
+        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a>, 
+        <em>Crelle's Journal</em>, (2024) 
+        <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">Pdf</a>.
     </li>
        <li>
         <strong>On homogeneous plane waves</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), 
-          <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a> (2023), <em> J. Math. Phys. 66, 052501 (2025) </em> <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">Pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">Link</a>.
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
+          <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, <em> J. Math. Phys. 66, 052501 </em> (2025) <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
-        <em>Mathematische Annalen</em>, 
-        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">Link</a> (2025).
+        <em>Mathematische Annalen</em> (2025), 
+        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">Link</a>.
     </li>
 <li>
 <strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
