--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
         <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a>, 
         <em>Crelle's Journal</em>, (2024) 
-        <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">Pdf</a>.
+        <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a>.
     </li>
        <li>
         <strong>On homogeneous plane waves</strong> 
@@ -45,7 +45,7 @@
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
         <em>Mathematische Annalen</em> (2025), 
-        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">Link</a>.
+        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">link</a>.
     </li>
 <li>
 <strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
