--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,8 @@
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
-        <em>Mathematische Annalen</em> (2025), 
+        <em>Mathematische Annalen 392,619–658,
+</em> (2025), 
         <a href="https://drive.google.com/file/d/1xqwO59fQLwMjZWCayn8vMw4vj96HFqSS/view?usp=sharing" target="_blank">pdf</a>,
        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">link</a>.
     </li>
