--- a/publications.html
+++ b/publications.html
@@ -38,13 +38,13 @@
         <strong>On homogeneous plane waves</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
-          <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, <em> J. Math. Phys. 66, 052501 </em> (2025) <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
+          <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, <em> J. Math. Phys </em> (2025) <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
-        <em>Mathematische Annalen 392,619–658,
+        <em>Mathematische Annalen
 </em> (2025), 
         <a href="https://drive.google.com/file/d/1xqwO59fQLwMjZWCayn8vMw4vj96HFqSS/view?usp=sharing" target="_blank">pdf</a>,
        <a href="https://link.springer.com/article/10.1007/s00208-025-03095-9" target="_blank">link</a>.
