--- a/publications.html
+++ b/publications.html
@@ -27,22 +27,22 @@
 <ol>
     <li>
         <strong>Topology and Dynamics of compact plane waves</strong> 
-        (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">Ines Kath</a>, 
-        <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
+        (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">I. Kath</a>, 
+        <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), (2023)
         <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a>, 
         <em>Crelle's Journal</em>, (2024) 
         <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a>.
     </li>
        <li>
         <strong>On homogeneous plane waves</strong> 
-        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">Abdelghani Zeghib</a>), (2023)
+        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), (2023)
           <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, <em> J. Math. Phys </em> (2025) <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
-        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">Lilia Mehidi</a>), 
+        (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a>), 
         <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
         <em>Mathematische Annalen
 </em> (2025), 
@@ -51,7 +51,7 @@
     </li>
 <li>
 <strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
-        (with <a href="https://sites.google.com/view/alloutsouheib/home?authuser=0" target="_blank">Souheib Allout</a>), 
+        (with <a href="https://sites.google.com/view/alloutsouheib/home?authuser=0" target="_blank">S. Allout</a>), 
         <a href="https://arxiv.org/pdf/2503.07843" target="_blank">arXiv</a> (2025).
     
 </li>
