--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
     <h2>Talks</h2> 
     <ul>
     <li> 
-        <strong>BIRS: Geometry, Analysis, and Physics in Lorentzian Signature:</strong> 
+        <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature:</strong> 
         <em>upcoming talk</em> (06/05/2025) 
         <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>.
     </li>
