--- a/publications.html
+++ b/publications.html
@@ -63,13 +63,13 @@
     <h2>Talks</h2> 
     <ul>
     <li> 
-        <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature:</strong> 
+        <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
         <em>upcoming talk</em> (06/05/2025) 
         <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>.
     </li>
 
     <li> 
-        <strong>CIRM school geometric structures and discrete group actions:</strong> 
+        <strong>CIRM school geometric structures and discrete group actions, Marseille:</strong> 
         <em>Completeness of compact locally symmetric Lorentz manifolds</em> (14/04/2025) 
         <a href="https://conferences.cirm-math.fr/3241.html">site</a>, 
         <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>.
@@ -83,7 +83,7 @@
     </li>
 
     <li> 
-        <strong>Algebra, Geometry and Topology seminar:</strong> 
+        <strong>Algebra, Geometry and Topology seminar, Greifswald:</strong> 
         <em>Foliated geometric structures, symmetric spaces and completeness</em> (16/10/2024) 
         <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/forschungsseminar/">site</a>.
     </li>
