--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 <li>
 <strong>Completeness of compact loally symmetric Lorentz manifolds</strong> 
         (with <a href="https://sites.google.com/view/alloutsouheib/home?authuser=0" target="_blank">S. Allout</a>), 
-        <a href="https://arxiv.org/pdf/2503.07843" target="_blank">arXiv</a> (2025).
+        <a href="https://arxiv.org/pdf/2503.07843" target="_blank">arXiv</a> (2025), submitted.
     
 </li>
 
