--- a/teaching.html
+++ b/teaching.html
@@ -42,7 +42,11 @@
         
         
     </ul>
+<hr>
 
+    <ul>
+        <li> A two days mini course on finite groups for MathWin students (December 2022). </li>
+    </ul>
     <a href="index.html">⬅ Back to Home</a>
 
 </body>
