--- a/teaching.html
+++ b/teaching.html
@@ -43,7 +43,7 @@
         
     </ul>
 <hr>
-
+<p><strong>At MathWin:</strong></p>
     <ul>
         <li> A two days mini course on finite groups for MathWin students (December 2022). </li>
     </ul>
