--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
     <p><strong>At Greifswald University:</strong></p>
 
     <ul>
-        <li>Analysis II (Fall 2025, 15 students, 28H) conducted in German.</li>
+        <li>Analysis II (Summer 2025, 13 students, 28H) conducted in German.</li>
         <li>Analysis I (Fall 2024, 7 students, 28H), conducted in German.</li>
         <li>Functional Analysis exercises (Summer 2024, 7 students, 28H).</li>
         <li>Measure and Integration exercises (Fall 2023, 6 students, 28H).</li>
