--- a/publications.html
+++ b/publications.html
@@ -64,8 +64,9 @@
     <ul>
     <li> 
         <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
-        <em>upcoming talk</em> (06/05/2025) 
-        <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>.
+        <em>On geometry and topology of locally homogeneous
+plane waves and beyond</em> (06/05/2025) 
+        <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>, <a href="https://www.dropbox.com/scl/fi/34o4uu0bqh6phjddl0vzg/Talk_Granada.final.pdf?rlkey=qnefazdtpqo01p0ng5h70zyr8&st=fue1gp9s&dl=0">slides</a>.
     </li>
 
     <li> 
