--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: Times New Roman, sans-serif;
+           
             max-width: 800px;
             margin: auto;
             padding: 20px;
@@ -17,6 +18,25 @@
         h1 {
             text-align: center;
         }
+body {
+    font-size: 1.1rem; /* slightly bigger than default */
+}
+
+@media (max-width: 600px) {
+  body {
+    font-size: 1.2rem; /* larger font for phones */
+    padding: 1rem;
+  }
+
+  h1, h2, h3 {
+    font-size: 1.5em;
+  }
+
+  .navbar a {
+    font-size: 1.1rem;
+    padding: 10px;
+  }
+}
 
         /* Navigation Bar */
         .navbar {
