--- a/publications.html
+++ b/publications.html
@@ -55,10 +55,10 @@
         <em>Crelle's Journal</em>, (2024) 
         <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a>.
     </li>
-     <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, (2023)  <li>
+       <li>
         <strong>On homogeneous plane waves</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), <br> 
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a>, (2023)
            <em> J. Math. Phys </em> (2025) <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
     </li>
     <li>
