--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 
    
     
-    <h2>Publications and Preprints</h2>
+    <h2>Publications</h2>
 <ol>
     <li>
         <strong>Topology and Dynamics of compact plane waves</strong> 
