--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malek Hanounah</title>
     <link rel="icon" href="88x88.png" type="image/png">
+   <link rel="stylesheet" href="style.css">
    <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
 
     <style>
