--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,14 @@
         body {
     font-size: 1.1rem; /* slightly bigger than default */
 }
-
+ body {
+            font-family: Times New Roman, sans-serif;
+           
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            line-height: 1.6;
+        }
    
  
 @media (max-width: 600px) {
