--- a/publications.html
+++ b/publications.html
@@ -101,10 +101,10 @@
     <h2>Talks</h2> 
     <ul>
         <li>
-            <strong> Differential geometry research Seminar at Hamburg university
-            </strong> <em> On completeness compact locally symmetric spaces of signature $(2,2)$
+            <strong> Differential geometry research seminar at Hamburg university
+            </strong> <em> On completeness compact locally symmetric spaces of signature (2,2)
             
-            </em> (17/11/2025)
+            </em> (17/11/2025).
         </li>
     <li> 
         <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
