--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
     <h2>Talks</h2> 
     <ul>
         <li>
-            <strong> Differential geometry research seminar at Hamburg university
+            <strong> Differential geometry research seminar, Hamburg
             </strong> <em> On completeness compact locally symmetric spaces of signature (2,2)
             
             </em> (17/11/2025).
