--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,7 @@
             <strong> Differential geometry research seminar, Hamburg:
             </strong> <em> On completeness compact locally symmetric spaces of signature (2,2)
             
-            </em> (17/11/2025).
+            </em> (17/11/2025), <a href="https://www.math.uni-hamburg.de/home/dyckerhoff/calendar/">site</a>.
         </li>
     <li> 
         <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
@@ -115,27 +115,27 @@ plane waves and beyond</em> (06/05/2025)
 
     <li> 
         <strong>CIRM school geometric structures and discrete group actions, Marseille:</strong> 
-        <em>Completeness of compact locally symmetric Lorentz manifolds</em> (14/04/2025) 
+        <em>Completeness of compact locally symmetric Lorentz manifolds</em> (14/04/2025), 
         <a href="https://conferences.cirm-math.fr/3241.html">site</a>, 
         <a href="https://drive.google.com/file/d/1U40esYnlFvGZ8HVJDKURQaFqu-EB4mmt/view?usp=sharing">slides</a>.
     </li>
 
     <li> 
         <strong>RSME's 7th Congress of Young Researchers Bilbao:</strong> 
-        <em> A Bieberbach theorem for compact locally homogeneous plane waves</em> (16/01/2025) 
+        <em> A Bieberbach theorem for compact locally homogeneous plane waves</em> (16/01/2025),
         <a href="https://jovenes2025.rsme.es/paralelaGT01.html">site</a>, 
         <a href="https://drive.google.com/file/d/1sKbhIWvx69_yyVI5hliWQZl0SZ1hyGKB/view?usp=sharing">slides</a>.
     </li>
 
     <li> 
         <strong>Algebra, Geometry and Topology seminar, Greifswald:</strong> 
-        <em>Foliated geometric structures, symmetric spaces and completeness</em> (16/10/2024) 
+        <em>Foliated geometric structures, symmetric spaces and completeness</em> (16/10/2024),
         <a href="https://math-inf.uni-greifswald.de/forschung/algebra-geometrie-und-topologie/forschungsseminar/">site</a>.
     </li>
 
     <li> 
         <strong>Tassili Sunday Maths Seminar (TSMS):</strong> 
-        <em>Foliated geometric structures</em> (09/06/2024) 
+        <em>Foliated geometric structures</em> (09/06/2024),
         <a href="https://tassiliseminar.github.io/">site</a>.
 
 <hr>
