--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
     <li> 
         <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
         <em>On geometry and topology of locally homogeneous
-plane waves and beyond</em> (06/05/2025) 
+plane waves and beyond</em> (06/05/2025),
         <a href="https://sites.google.com/view/workshop-granada-2025/home?authuser=0">site</a>, <a href="https://www.dropbox.com/scl/fi/34o4uu0bqh6phjddl0vzg/Talk_Granada.final.pdf?rlkey=qnefazdtpqo01p0ng5h70zyr8&st=fue1gp9s&dl=0">slides</a>.
     </li>
 
