--- a/publications.html
+++ b/publications.html
@@ -92,7 +92,7 @@
     
 </li>
 <li>
-<strong>Completeness of closed Kleinian flat Pseudo-Riemannian Manifolds of Signature (2,2)</strong>, , with   <a href="https://sites.google.com/view/fariddiaf/home" target="_blank">F. Diaf</a> and <a href="https://www.ihes.fr/~/galiay/" target="_blank">B. Galiay</a>
+<strong>Completeness of closed Kleinian flat Pseudo-Riemannian Manifolds of Signature (2,2)</strong>, with   <a href="https://sites.google.com/view/fariddiaf/home" target="_blank">F. Diaf</a> and <a href="https://www.ihes.fr/~/galiay/" target="_blank">B. Galiay</a>,
         <a href="https://arxiv.org/abs/2601.01276" target="_blank">arXiv</a> (2026), submitted.
     
 </li>
